--- a/styles.css
+++ b/styles.css
@@ -57,13 +57,22 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('images/portland.jpg') no-repeat top center ;
+  background: url('images/GoldenGate.jpg') no-repeat top center ;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
 }
 header {
   line-height: 1.5;
+}
+
+#exp{
+  color:#0399ff;
+  text-align:center;
+  padding-top: 20px;
+}
+#secondpage{
+  background-color:yellowgreen;
 }
 header .profile-image {
   margin-top: 50px;
@@ -151,9 +160,7 @@ a.social {
   opacity: .4;
   transition: all .5s;
 }
-a.twitter {
-  background-image: url(images/twitter.svg);
-}
+
 a.linkedin {
   background-image: url(images/linkedin.svg);
 }
@@ -177,6 +184,12 @@ a.social:hover {
       -ms-flex-pack: distribute;
       justify-content: space-around;
       margin: 0 auto;
+  }
+
+  .container {
+    max-width: 1000px;
+    justify-content: space-around;
+    margin: 0 auto;
   }
 
   header {
